# mention2meddra

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  sitecustomize.py
configs/: formal_v1.yml
examples/: synthetic_meddra.csv  synthetic_pairs.jsonl  synthetic_predictions.jsonl
mention2meddra/: __init__.py
scripts/: audit_manuscript_claims.py  audit_repository.py  evaluate_predictions.py  retrieve_candidates.py  run_smoke_workflow.sh  train_cross_encoder.py
src/mention2meddra/: __init__.py  audit.py  cli.py  dictionary.py  io.py  metrics.py  retrieval.py  schemas.py  templates.py  thresholds.py  train.py
tests/: conftest.py  test_audits_and_smoke.py  test_cli_and_package.py  test_metrics_thresholds.py  test_schemas.py  test_templates_retrieval.py
