[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mention2meddra"
version = "0.1.0"
description = "Chinese ADR mention-to-MedDRA normalization workflow"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Fanghui Gao"}]
dependencies = []

[project.optional-dependencies]
train = [
  "accelerate",
  "numpy",
  "torch",
  "transformers",
]
test = [
  "pytest",
]
yaml = [
  "pyyaml",
]

[project.scripts]
mention2meddra = "mention2meddra.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
